<resources>
    <string name="default_web_client_id">624699746827-eej8t0rva7rvqrhs9cciqi9iiphfdeu4.apps.googleusercontent.com</string>
    <string name="app_name">CimerMK</string>
    <string name="create_account">Create account</string>
    <string name="app_slogan">Find a roommate or apartment</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="language">Language</string>

    <string name="forgot_password">Forgot password?</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="basic_info">Basic information</string>
    <string name="price_euro_optional">Price in euros (€) - optional</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="select_gender">Select gender</string>
    <string name="select_city">Select city</string>
    <string name="email_label">Email</string>
    <string name="gender_label">Gender</string>
    <string name="city_label">City</string>
    <string name="age_label">Age</string>
    <string name="faculty_label">Faculty</string>
    <string name="account">Account</string>
    <string name="personal_info">Personal information</string>
    <string name="contact">Contact</string>
    <string name="contact_type">Contact type</string>

    <string name="age_optional">Age (optional)</string>
    <string name="faculty_optional">Faculty (optional)</string>
    <string name="select_contact_type">Select contact type</string>
    <string name="phone">Phone</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="viber">Viber</string>
    <string name="contact_info">Contact info</string>
    <string name="post_info">Post information</string>
    <string name="price_euro">Price in euros (€)</string>
    <string name="post_type">Post type</string>


    <string name="looking_for_roommate">Looking for roommate</string>
    <string name="looking_for_apartment">Looking for apartment</string>
    <string name="offering_apartment">Offering apartment</string>

    <string name="enter_email_first">Enter your email first</string>
    <string name="password_reset_sent">Password reset email sent</string>

    <string name="create_roommate_post">Create roommate post</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="saved">Saved</string>
    <string name="favorite">Favorite</string>
    <string name="gender">Gender</string>
    <string name="yes">Yes</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="all">All</string>

    <string name="title">Title</string>
    <string name="city">City</string>
    <string name="price">Price in euros (€)</string>
    <string name="description">Description</string>

    <string name="save_post">Save Post</string>
    <string name="update_post">Update Post</string>
    <string name="edit_post">Edit post</string>

    <string name="search_posts">Search posts</string>

    <string name="min_price">Min Price</string>
    <string name="max_price">Max Price</string>

    <string name="favorites">Favorites</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="my_posts">My Posts</string>

    <string name="cancel">Cancel</string>
    <string name="save_changes">Save changes</string>
    <string name="changes_saved">Changes saved successfully</string>
    <string name="changes_save_error">Error saving changes</string>

    <string name="total_posts">Total posts: %1$d</string>
    <string name="shown_posts">Shown: %1$d</string>
    <string name="my_posts_count">My posts: %1$d</string>
    <string name="saved_posts_count">Saved posts: %1$d</string>
    <string name="contact_not_added">Contact: Not added</string>
    <string name="shown_zero">Shown: 0</string>
    <string name="all_cities">All cities</string>
    <string name="view_on_map">View on map</string>
    <string name="go_to_profile">Author profile</string>

    <string name="confirm_delete">
        Are you sure you want to delete this post?
    </string>

    <string name="fill_fields">Please fill all fields</string>
    <string name="login_success">Login successful</string>
    <string name="registration_success">Registration successful</string>

    <string name="post_updated">Post updated</string>
    <string name="update_error">Error updating post</string>

    <string name="post_saved">Post saved successfully</string>
    <string name="save_error">Error saving post</string>

    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="saved_nav">Saved</string>
    <string name="profile">Profile</string>
    <string name="user_posts">User posts</string>

    <string name="use_current_location">Use current location</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="city_detected">City detected: %1$s</string>
    <string name="could_not_detect_city">Could not detect city</string>
    <string name="turn_on_location">Turn on location and try again</string>
    <string name="location_error">Location error</string>

    <string name="facebook_app_id">1409976154305629</string>
    <string name="fb_login_protocol_scheme">fb1409976154305629</string>
    <string name="facebook_client_token">2ed7e31e4bf4f1a2e7aa82ed21ae5876</string>

</resources>