<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@android:drawable/ic_menu_view"/>

    <item
        android:id="@+id/nav_search"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"/>

    <item
        android:id="@+id/nav_add"
        android:title="@string/add"
        android:icon="@android:drawable/ic_input_add"/>

    <item
        android:id="@+id/nav_favorites"
        android:title="@string/saved_nav"
        android:icon="@android:drawable/btn_star"/>

    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@android:drawable/ic_menu_myplaces"/>

</menu>