<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5FAFA"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#009991"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:id="@+id/etEditFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"/>

        <EditText
            android:id="@+id/etEditLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:layout_marginTop="14dp"/>

        <Spinner
            android:id="@+id/spEditProfileGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"/>

        <Spinner
            android:id="@+id/spEditProfileCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"/>

        <EditText
            android:id="@+id/etEditAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age_optional"
            android:inputType="number"
            android:layout_marginTop="14dp"/>

        <EditText
            android:id="@+id/etEditFaculty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/faculty_optional"
            android:layout_marginTop="14dp"/>

        <Spinner
            android:id="@+id/spEditContactType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"/>

        <EditText
            android:id="@+id/etEditContactInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_info"
            android:layout_marginTop="14dp"/>

        <Button
            android:id="@+id/btnSaveProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:backgroundTint="#009991"
            android:textColor="@android:color/white"
            android:layout_marginTop="24dp"/>

    </LinearLayout>

</ScrollView>