<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_posts"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etMinPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/min_price"
        android:inputType="number"/>

    <EditText
        android:id="@+id/etMaxPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/max_price"
        android:inputType="number"/>

    <Spinner
        android:id="@+id/spGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>